# hal_stm32

./: .gitignore  CMakeLists.txt  LICENSE  README  README.rst  REUSE.toml
lib/: CMakeLists.txt  README  README.rst  ble_zephyr.patch
lib/stm32wb/: CMakeLists.txt  README.rst
lib/stm32wb/hci/: README  app_common.h  app_conf.h  ble_bufsize.h  dbg_trace.h  hci_tl.h  hw.h  hw_conf.h  hw_if.h  hw_ipcc.c  mbox_def.h  shci.c  shci.h  shci_tl.c  shci_tl.h  shci_tl_if.c  stm32_wpan_common.h  stm_list.c  stm_list.h  tl.h  tl_dbg_conf.h  tl_if.c  tl_mbox.c  utilities_common.h  utilities_conf.h
lib/stm32wb0/: CMakeLists.txt  README  README.rst
lib/stm32wb0/STM32_BLE/: ble.h  ble_legacy.h  stm32_ble_common.h
lib/stm32wba/: CMakeLists.txt  README  README.rst
lib/stm32wba/IEEE802154/: CMakeLists.txt
lib/stm32wba/RF_Integration/: CMakeLists.txt
lib/stm32wba/STM32_WPAN/: CMakeLists.txt  blob_stubs.c
lib/stm32wba/ble/: CMakeLists.txt  README.rst
lib/stm32wba/concurrent/: CMakeLists.txt
lib/stm32wba/hci/: README  app_conf.h  app_debug.h  app_entry.h  ble_bufsize.h  ble_const.h  ble_defs.h  ble_std.h  bleplat.h  blestack.h  debug_config.h  debug_signals.h  flash_driver.c  flash_manager.c  flash_manager.h  hw.h  hw_aes.c  hw_if.h  linklayer_plat.c  linklayer_plat.h  ll_sys.h  ll_sys_cs.c  ll_sys_dp_slp.c  ll_sys_intf.c  ll_sys_startup.c  log_module.c  log_module.h  main.h  pta.h  rf_timing_synchro.c  scm.c  scm.h  stm32_wpan_common.h  stm_list.c  utilities_common.h  utilities_conf.h
lib/stm32wba/hci/auto/: ble_types.h
lib/vc8000nanoe/: CMakeLists.txt  README.rst  st_readme.txt
lib/vc8000nanoe/inc/: basetype.h  enccommon.h  encdebug.h  ewl.h  reg_offset_v7.h
stm32cube/: CMakeLists.txt  series_list.cmake
stm32cube/common/include/: stm32_assert.h
stm32cube/common_ll/: README.rst
stm32cube/common_ll/include/: stm32_ll_adc.h  stm32_ll_bdma.h  stm32_ll_bsec.h  stm32_ll_bus.h  stm32_ll_cacheaxi.h  stm32_ll_comp.h  stm32_ll_cordic.h  stm32_ll_cortex.h  stm32_ll_crc.h  stm32_ll_crs.h  stm32_ll_dac.h  stm32_ll_dbgmcu.h  stm32_ll_dcache.h  stm32_ll_delayblock.h  stm32_ll_dlyb.h  stm32_ll_dma.h  stm32_ll_dma2d.h  stm32_ll_dmamux.h  stm32_ll_etzpc.h  stm32_ll_exti.h  stm32_ll_flash.h  stm32_ll_fmac.h  stm32_ll_fmc.h  stm32_ll_fmpi2c.h  stm32_ll_fsmc.h  stm32_ll_gpio.h  stm32_ll_hrtim.h  stm32_ll_hsem.h  stm32_ll_i2c.h  stm32_ll_i3c.h  stm32_ll_icache.h  stm32_ll_ipcc.h  stm32_ll_iwdg.h  stm32_ll_lcsc.h  stm32_ll_lpawur.h  stm32_ll_lpgpio.h  stm32_ll_lptim.h  stm32_ll_lpuart.h  stm32_ll_mdma.h  stm32_ll_mrsubg.h  (+21 more)
stm32cube/cube_legacy_placeholder/Legacy/: stm32_hal_legacy.h
stm32cube/hal1_legacy_placeholder/: CMakeLists.txt
stm32cube/hal1_legacy_placeholder/Legacy/: stm32_hal_legacy.h
stm32cube/legacy_placeholder/Legacy/: stm32_hal_legacy.h
stm32cube/stm32c0xx/: CMakeLists.txt  README  release_note.html
stm32cube/stm32c0xx/soc/: stm32c011xx.h  stm32c031xx.h  stm32c0xx.h
stm32cube/stm32c5xx/: CMakeLists.txt  LICENSE.md  README
stm32cube/stm32f0xx/: CMakeLists.txt  README
stm32cube/stm32f0xx/soc/: stm32f030x6.h  stm32f030x8.h  stm32f030xc.h  stm32f031x6.h  stm32f038xx.h  stm32f042x6.h  stm32f048xx.h  stm32f051x8.h  stm32f058xx.h  stm32f070x6.h  stm32f070xb.h  stm32f071xb.h  stm32f072xb.h  stm32f078xx.h  stm32f091xc.h  stm32f098xx.h  stm32f0xx.h  system_stm32f0xx.c  system_stm32f0xx.h
stm32cube/stm32f1xx/: CMakeLists.txt  README
stm32cube/stm32f1xx/soc/: stm32f105xc.h  system_stm32f1xx.c
stm32cube/stm32f2xx/: CMakeLists.txt  README  release_note.html
stm32cube/stm32f2xx/soc/: stm32f205xx.h  stm32f207xx.h  stm32f215xx.h  stm32f217xx.h  stm32f2xx.h  system_stm32f2xx.c  system_stm32f2xx.h
stm32cube/stm32f3xx/: CMakeLists.txt  README
stm32cube/stm32f3xx/soc/: stm32f301x8.h  stm32f302x8.h  stm32f302xc.h  stm32f302xe.h  stm32f303x8.h  stm32f303xc.h  stm32f303xe.h  stm32f318xx.h  stm32f328xx.h  stm32f334x8.h  stm32f358xx.h  stm32f373xc.h  stm32f378xx.h  stm32f398xx.h  stm32f3xx.h  system_stm32f3xx.c  system_stm32f3xx.h
stm32cube/stm32f4xx/: CMakeLists.txt  README
stm32cube/stm32f4xx/soc/: stm32f417xx.h  stm32f427xx.h  stm32f429xx.h  stm32f439xx.h  stm32f469xx.h  stm32f4xx.h
stm32cube/stm32f7xx/: CMakeLists.txt  README
stm32cube/stm32f7xx/soc/: stm32f722xx.h  stm32f723xx.h  stm32f730xx.h  stm32f732xx.h  stm32f733xx.h  stm32f745xx.h  stm32f746xx.h  stm32f750xx.h  stm32f756xx.h  stm32f765xx.h  stm32f767xx.h  stm32f769xx.h  stm32f777xx.h  stm32f779xx.h  system_stm32f7xx.c  system_stm32f7xx.h
stm32cube/stm32g0xx/: CMakeLists.txt  README
stm32cube/stm32g0xx/soc/: stm32g030xx.h  stm32g031xx.h  stm32g041xx.h  stm32g070xx.h  stm32g081xx.h  stm32g0b0xx.h  stm32g0b1xx.h  stm32g0c1xx.h
stm32cube/stm32g4xx/: CMakeLists.txt  README
stm32cube/stm32g4xx/soc/: stm32g411xb.h  stm32g411xc.h  stm32g414xx.h  stm32g431xx.h  stm32g441xx.h  stm32g471xx.h  stm32g473xx.h  stm32g474xx.h  stm32g483xx.h  stm32g484xx.h  stm32g491xx.h  stm32g4a1xx.h  stm32g4xx.h  stm32gbk1cb.h  system_stm32g4xx.c
stm32cube/stm32h5xx/: CMakeLists.txt  README  release_note.html
stm32cube/stm32h7rsxx/: CMakeLists.txt  README  Release_Notes.html  release_note.html
stm32cube/stm32h7xx/: CMakeLists.txt  README
stm32cube/stm32l0xx/: CMakeLists.txt  README
stm32cube/stm32l1xx/: CMakeLists.txt  README  release_note.html
stm32cube/stm32l4xx/: CMakeLists.txt  README
stm32cube/stm32l5xx/: CMakeLists.txt  README  release_note.html
stm32cube/stm32mp13xx/: CMakeLists.txt  LICENSE.md  README
stm32cube/stm32mp1xx/: CMakeLists.txt  README  release_note.html
stm32cube/stm32mp2xx/: CMakeLists.txt  README
stm32cube/stm32n6xx/: CMakeLists.txt  README
stm32cube/stm32u0xx/: CMakeLists.txt  README  release_Notes.html
stm32cube/stm32u3xx/: CMakeLists.txt  README
stm32cube/stm32u5xx/: CMakeLists.txt  README
stm32cube/stm32wb0x/: CMakeLists.txt  README  Release_Notes.html
stm32cube/stm32wbaxx/: CMakeLists.txt  README  Release_Notes.html  release_note.html
stm32cube/stm32wbxx/: CMakeLists.txt  README
stm32cube/stm32wl3x/: CMakeLists.txt  README
stm32cube/stm32wlxx/: CMakeLists.txt  README
(+5228 files in other folders)
